gst/matroska/matroska-demux.c
@@ -2752,8 +2752,6 @@ gst_matroska_demux_push_codec_data_all (GstMatroskaDemux * demux)
 {
   gint stream_nr;
 
-  GST_OBJECT_LOCK (demux);
-
   g_assert (demux->common.num_streams == demux->common.src->len);
   for (stream_nr = 0; stream_nr < demux->common.src->len; stream_nr++) {
     GstMatroskaTrackContext *stream;
@@ -2778,7 +2776,6 @@ gst_matroska_demux_push_codec_data_all (GstMatroskaDemux * demux)
     }
   }
 
-  GST_OBJECT_UNLOCK (demux);
 }
 
 static GstFlowReturn
